Fixed issue with some tooltips appearing behind the windows

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -157,7 +157,7 @@ a.button:active span {
 	padding: 6px 0 4px 18px; /* push text down 1px */
 }
 #tooltip {
-	z-index: 10000;
+	z-index: 15000;
 	background-color: #e9f2ff;
 	border: 1px solid #8eaace;
 	border-radius: 3px;
